--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,7 +61,13 @@
     "FeatureProjects.Projects": [{
             "Title": "Agrourbana",
             "Description": "Monitoring application made from scratch with auth module, configurable graphics, configurable alarms, and user management. It also has feedback form logic for parameter configuration.",
-            "img": "assets/images/agrourbana.png",
+            "imgs": [
+                "assets/images/agrourbana/agrourbana1.png",
+                "assets/images/agrourbana/agrourbana2.png",
+                "assets/images/agrourbana/agrourbana3.png",
+                "assets/images/agrourbana/agrourbana4.png",
+                "assets/images/agrourbana/agrourbana5.png"
+            ],
             "Link-gh": "https://github.com/andresjosehr/agrourbana",
             "Link-demo": "https://agrourbana.andresjosehr.com/",
             "Technologies": ["Laravel", "Angular", "SASS", "Angular Material", "RxJS"]
@@ -69,7 +75,7 @@
         {
             "Title": "Hands game",
             "Description": "The rock-paper-scissors game extended. A personal project developed in angular in which you play randomly against the machine. It has the use of services, interfaces, and components.",
-            "img": "assets/images/hands-game.png ",
+            "imgs": ["assets/images/hands-game.png"],
             "Link-gh": "https://github.com/andresjosehr/hands-game",
             "Link-demo": "https://handsgame.andresjosehr.com/",
             "Technologies": ["Angular", "CSS GRID", "SASS", "Angular animations"]
@@ -77,7 +83,7 @@
         {
             "Title": "Countries viewer",
             "Description": "An interface that consumes an API of countries with which you can view a list of countries, see details of each country, filter by name and region. It also has a dark mode to switch between dark and light themes.",
-            "img": "assets/images/countries-viewer.png",
+            "imgs": ["assets/images/countries-viewer.png"],
             "Link-gh": "https://github.com/andresjosehr/countries-viewer",
             "Link-demo": "https://countriesviewer.andresjosehr.com/",
             "Technologies": ["Angular", "RxJS", "SASS", "API"]
