--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -68,8 +68,6 @@
                 "assets/images/agrourbana/agrourbana4.png",
                 "assets/images/agrourbana/agrourbana5.png"
             ],
-           
-            "Link-demo": "https://agrourbana.andresjosehr.com/",
             "Technologies": ["Laravel", "Angular", "SASS", "Angular Material", "RxJS"]
         },
         {
@@ -82,8 +80,6 @@
                 "assets/images/tusuperplan/tusuperplan4.png",
                 "assets/images/tusuperplan/tusuperplan5.png"
             ],
-            
-            "Link-demo": "https://app.tusuperplan.cl/",
             "Technologies": ["Laravel", "Angular", "SASS", "Angular Material", "RxJS"]
         },
         {
@@ -103,10 +99,8 @@
                 "assets/images/proyex/proyex11.png",
                 "assets/images/proyex/proyex12.png"
             ],
-            
-            "Link-demo": "https://proyex.andresjosehr.com/",
             "Technologies": ["Laravel", "Angular", "SASS", "Angular Material", "RxJS"]
-        },    
+        },
         {
             "Title": "Hands game",
             "Description": "Juego de piedra papel y tijeras extendido. Un proyecto personal desarrollado en angular en el que juegas al azar contra la máquina. Cuenta con la utilización de servicios, interfaces y componentes.",
@@ -132,56 +126,56 @@
             "Title": "Pokemon",
             "Description": "Buscador de pokemons que utiliza la pokeapi. Se usó programación orientada a objetos para organizar la información de los pokemons junto con su respectiva imagen.",
             "Link-gh": "https://github.com/andresjosehr/pokemon-angular",
-            "Link-demo": "https://pokemonlist.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/pokemon-list",
             "Technologies": ["Angular", "RxJs", "API", "Bootstrap"]
         },
         {
             "Title": "Coming soon page",
             "Description": "Proyecto personal de una página dividida de dos columnas para ser usado como 'Coming soon page'. Programada para ser totalmente responsive design. Cuenta con un campo de formulario para suscribirse por correo electrónico.",
             "Link-gh": "https://github.com/andresjosehr/coming-soon-page",
-            "Link-demo": "https://comingsoonpage.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/coming-soon-page",
             "Technologies": ["Angular", "SASS", "CSS GRID", "Reactive form"]
         },
         {
             "Title": "Four card feature section",
             "Description": "Una sola página que cuenta con un diseño minimalista que enumera 4 características en 4 cards. Se usan animaciones de entrada con angular animations.",
             "Link-gh": "https://github.com/andresjosehr/fourd-card-feature-section",
-            "Link-demo": "https://fourcardfeaturesection.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/four-card-feature-section",
             "Technologies": ["Angular", "SASS", "CSS GRID"]
         },
         {
             "Title": "Testimonial slider",
             "Description": "Diseño de una sola página que cuenta que dos testimonios que hacen transición en un slider programado en angular. Los datos de los testimonios son consultados una API desarrollada en ExpressJS almacenada en Heroku que obtiene los datos de una base de datos MongoDB.",
             "Link-gh": "https://github.com/andresjosehr/testimonials-slider-app",
-            "Link-demo": "https://testimonialsslider.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/testimonials-slider",
             "Technologies": ["Angular", "ExpressJS", "MongoDB", "Angular animations", "CSS GRID"]
         },
         {
             "Title": "Article preview",
             "Description": "Componente de preview de un artículo. Se desarrolló en angular y los datos son consultados a través de una API desarrollada en NodeJS y los datos se encuentran almacenados en una base de datos MongoDB.",
             "Link-gh": "https://github.com/andresjosehr/article-preview-app",
-            "Link-demo": "https://articlepreview.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/article-preview",
             "Technologies": ["Angular", "ExpressJS", "MongoDB", "CSS GRID"]
         },
         {
             "Title": "Social proof section",
             "Description": "Proyecto personal de una página diseñada a partir de un diseño hecho en figma. Se utilizó angular para el desarrollo junto con SASS y CSS GRID.",
             "Link-gh": "https://github.com/andresjosehr/social-proof-section",
-            "Link-demo": "https://socialproofsection.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/social-proof-section",
             "Technologies": ["Angular", "CSS GRID", "GIT"]
         },
         {
             "Title": "FAQ accordion card",
             "Description": "Acordeón de preguntas frecuentes con lógica y animnaciones realizadas en Angular.",
             "Link-gh": "https://andresjosehr.github.io/faq-accordion/",
-            "Link-demo": "https://faqaccordion.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/faq-accordion",
             "Technologies": ["Angular", "CSS GRID", "Angular animations"]
         },
         {
             "Title": "Profile card",
             "Description": "Simple diseño de una página que cuenta con una carta de perfil con información básica de una persona.",
             "Link-gh": "https://andresjosehr.github.io/faq-accordion/",
-            "Link-demo": "https://faqaccordion.andresjosehr.com/",
+            "Link-demo": "https://andresjosehr.com/proyectos/profile-card-component",
             "Technologies": ["Angular", "SASS", "GIT"]
         }
     ],
